First Entity and DataBase Connection

--- a/Project.API/appsettings.Development.json
+++ b/Project.API/appsettings.Development.json
@@ -1,8 +1,23 @@
 {
+
+  "ConnectionStrings": {
+
+    "MyConnection": "Server= DANIELMMNEZ;Database=Project;Encrypt=False;User Id=danielmmnez;Password=Abcd1234*;"
+
+  },
+
   "Logging": {
+
     "LogLevel": {
+
       "Default": "Information",
+
       "Microsoft.AspNetCore": "Warning"
+
     }
-  }
-}
+
+  },
+
+  "AllowedHosts": "*"
+
+} 
