--- a/Project.API/appsettings.json
+++ b/Project.API/appsettings.json
@@ -1,9 +1,23 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+
+  "ConnectionStrings": {
+
+    "MyConnection": "Server= DANIELMMNEZ;Database=Project;Encrypt=False;User Id=danielmmnez;Password=Abcd1234*;"
+
   },
+
+  "Logging": {
+
+    "LogLevel": {
+
+      "Default": "Information",
+
+      "Microsoft.AspNetCore": "Warning"
+
+    }
+
+  },
+
   "AllowedHosts": "*"
-}
+
+} 
