--- a/Project.API/appsettings.Development.json
+++ b/Project.API/appsettings.Development.json
@@ -6,6 +6,12 @@
 
   },
 
+  "CoutriesAPI": {
+    "urlBase": "https://api.countrystatecity.in",
+    "tokenName": "X-CSCAPI-KEY",
+    "tokenValue": "NHNudlg5MFR1RmVnSVdnelVlT01rM1l4eGZaZUhrZ3V5ajcxTVNZOA=="
+  },
+
   "Logging": {
 
     "LogLevel": {
