--- a/Project.API/appsettings.Development.json
+++ b/Project.API/appsettings.Development.json
@@ -24,6 +24,6 @@
 
   },
 
-  "AllowedHosts": "*"
-
+  "AllowedHosts": "*",
+  "jwtKey": "sagdsadgfeSDF674545REFG$%FEfgdslkjfglkjhfgdkljhdR5454545_4TGRGtyo!!kjytkljty"
 } 
