--- a/Project.API/appsettings.json
+++ b/Project.API/appsettings.json
@@ -24,6 +24,7 @@
 
   },
 
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "jwtKey": "sagdsadgfeSDF674545REFG$%FEfgdslkjfglkjhfgdkljhdR5454545_4TGRGtyo!!kjytkljty"
 
 } 
