--- a/Project.API/appsettings.json
+++ b/Project.API/appsettings.json
@@ -2,8 +2,8 @@
 
   "ConnectionStrings": {
 
-    "MyConnection": "Server= SAIMROUD;Database=Project;Encrypt=False;User Id=GODSOFSEX2;Password=Abcd1234*;"
-
+    //"MyConnection": "Server= SAIMROUD;Database=Project;Encrypt=False;User Id=GODSOFSEX2;Password=Abcd1234*;",
+    "MyConnection": "Server= DANIELMMNEZ;Database=Project;Encrypt=False;User Id=danielmmnez;Password=Abcd1234*;"
   },
 
   "CoutriesAPI": {
