--- a/Project.API/appsettings.json
+++ b/Project.API/appsettings.json
@@ -26,6 +26,15 @@
   },
 
   "AllowedHosts": "*",
-  "jwtKey": "sagdsadgfeSDF674545REFG$%FEfgdslkjfglkjhfgdkljhdR5454545_4TGRGtyo!!kjytkljty"
+  "jwtKey": "sagdsadgfeSDF674545REFG$%FEfgdslkjfglkjhfgdkljhdR5454545_4TGRGtyo!!kjytkljty",
 
+  "Mail": {
+    "From": "projecthappyzoo@gmail.com",
+    "Name": "Soporte HappyZoo",
+    "Smtp": "smtp.gmail.com",
+    "Port": 587,
+    "Password": "bwbrylgacdtjmszx"
+  },
+  //WEB Link
+  "UrlWEB": "localhost:7119"
 } 
